--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
   "scripts": {
     "migrate:up": "DATABASE_URL=postgres://postgres:12345678@localhost:5432/postgres node-pg-migrate up",
     "migrate:down": "DATABASE_URL=postgres://postgres:12345678@localhost:5432/postgres node-pg-migrate down",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@serverless/typescript": "^3.30.1",
     "@types/aws-lambda": "^8.10.147",
+    "@types/chai": "^5.0.1",
+    "@types/expect": "^1.20.4",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.10.5",
+    "@types/sinon": "^17.0.3",
+    "chai": "^5.1.2",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.24.2",
+    "mocha": "^11.0.1",
     "node-pg-migrate": "^7.8.0",
     "serverless": "^4.4.18",
     "serverless-offline": "^14.4.0",
+    "sinon": "^19.0.2",
+    "ts-node": "^10.9.2",
     "tsx": "^3.12.7",
     "typescript": "^5.7.2"
   },
