--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+      "outDir": "dist",
       "lib": ["ES2022"],
       "module": "ES2022",
       "moduleResolution": "Bundler", // introduced in TypeScript 5.0
@@ -8,5 +9,5 @@
       "target": "ES2022",
       "strict": true
     },
-    "include": ["environment.d.ts", "src/**/*.ts"],
+    "include": ["environment.d.ts", "src", "tests"],
   }
